charts/istiod/egress/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-github
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-github
  namespace: istio-system
spec:
  host: github.com
  trafficPolicy:
    tls:
      mode: SIMPLE
